[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "packetfrenzy.libmilter"
description = "My package description"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
keywords = []
authors = [
    {name = "Nick Czeczulin", email = "nick@packetfrenzy.com"},
]
classifiers = [
      "Development Status :: 4 - Beta",
      "Intended Audience :: Developers",
      "Natural Language :: English",
      "License :: OSI Approved :: MIT License",
      "Operating System :: POSIX :: Linux",
      "Programming Language :: Python",
      "Programming Language :: Python :: 3",
      "Programming Language :: Python :: 3 :: Only",
      "Programming Language :: Python :: 3.10",
      "Programming Language :: Python :: 3.11",
      "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = []
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "tox",
]

[tool.setuptools_scm]

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
where = ["ext"]  # list of folders that contain the packages (["."] by default)
exclude = ["*.c"]

[project.urls]
repository = "https://github.com/nczeczulin/packetfrenzy.libmilter.git"


